  * sbuild: Only override Distribution in .changes if specified as option on 
    the command-line. (closes: #300145)
  * sbuild: Specify full path for Dir::Etc::main and Dir::Etc::parts.
  * example.sbuildrc: Clarify that $maintainer_name is not mandatory and
    overrides Maintainer: field, whereas $uploader_name overrides 
    the Changed-By: field in changes.

 -- Michael Banck <mbanck@debian.org>  Sat,  8 Jan 2005 23:07:33 +0100

sbuild (0.34) unstable; urgency=high

  Francesco Paolo Lovergine:

  * Removed searchscripts recommendation in debian/control. That was requested
    by ppack now removed in archive.
    (closes: #272318)
  * checkchroot now uses grep-dctrl, thanks Clint Adams.
    Introduced dependency from grep-dctrl due to checkchroot.
    (closes: #260881,#265994)
  * Updated ref-* files for unstable and testing as well as the related README file.
  * This is the first revision CVS-enabled.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sat, 25 Sep 2004 17:42:57 +0200

sbuild (0.33) unstable; urgency=low

  * Man page sbuild.1 revised.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 16 Sep 2004 16:42:18 +0200

sbuild (0.32) unstable; urgency=low

  * Added ~ as a legal character for debian version (post-sarge).
  * A few minor changes in README.chroot-buildd and man page.
  * Added -k and -e options as overriding for -m default in package signing.
    Man page changed to reflect new features.
    (closes: #260870)
  * Removed the CVS log variable in sbuild in order to import a new sane
    tree onto Alioth repo. Old logs are now stored in a new cvslogs.old file.
  * Minor revisions to ducumentation files.
  * Added Michael Banck as Uploader.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 16 Sep 2004 16:14:27 +0200

sbuild (0.31) unstable; urgency=low

  * Patch for #239339 revised:
  	Escaping to manage correctly possible nested RE. 
        (closes: #268712)
  	Doing removes only in chroot environment.