@@ -4,7 +4,7 @@
 DEFAULT_CHROOT="oldstable stable testing unstable"
 USAGE_STRING="${0##*/} <chroot> (default: $DEFAULT_CHROOT)"
 
-. /usr/lib/sbuild/common_functions
+. /usr/share/sbuild/common_functions
 CHROOTS=${*:-"$DEFAULT_CHROOT"}
 
 for i in $CHROOTS; do
