@@ -11,7 +11,7 @@ Usage:
 
   sudo buildd.chroot <dist> <chroot> <mirror>
   eg,
-  sudo /usr/lib/sbuild/buildd.chroot sid /usr/local/chroot/unstable \
+  sudo /usr/share/sbuild/buildd.chroot sid /usr/local/chroot/unstable \
       http://http.us.debian.org/debian 
 
 where <dist> is one of the *.buildd name you can find in 
@@ -27,7 +27,7 @@ Usage:
 
   add_sbuild_user </path/to/chroot> <dist> <user>
   eg,
-  sudo /usr/lib/sbuild/add_sbuild_user /usr/local/chroot/unstable unstable rick
+  sudo /usr/share/sbuild/add_sbuild_user /usr/local/chroot/unstable unstable rick
 
  1. adds <user> to the sbuild group that was created during the install
  2. prompts you to add <user> to sudoers, using visudo
@@ -49,7 +49,7 @@ Build-essential and friends
 
  chrapt -t apt-get install sudo fakeroot ssmtp
  
- /usr/lib/sbuild/checkchroot -u
+ /usr/share/sbuild/checkchroot -u
      - shows what needs to be added to or deleted from the unstable
        chroot.  You can use "chrapt (-u|-s|-t|-o) apt-get install" to add
        packages (--purge remove to delete them) or "gochroot -u"
@@ -69,7 +69,7 @@ You may need to use the latest debootstrap.
 You'll have to log in again for you to be in group sbuild.
 
 debconf needs to be set noninteractive:
-$ /usr/lib/sbuild/gochroot -u ( or "sudo chroot /your/chroot bin/sh" )
+$ /usr/share/sbuild/gochroot -u ( or "sudo chroot /your/chroot bin/sh" )
 $ dpkg-reconfigure -plow debconf
     1. Dialog  2. Readline  3. Gnome  4. Editor  5. Noninteractive
   What interface should be used for configuring packages? [1] 5
