@@ -1,6 +1,6 @@
 etc
 usr/bin
-usr/lib/sbuild
+usr/share/sbuild
 usr/share/doc/sbuild
 usr/share/doc/sbuild/examples
 usr/share/man/man1
