@@ -45,9 +45,9 @@ install: build
 	$(INSTALL) -m 644 sbuild.conf sbuild.conf.local $(DESTDIR)/etc/
 
 	cp -a configs example.sbuildrc $(DESTDIR)/usr/share/doc/sbuild/examples/.
-	find bin -type f -maxdepth 1 -exec cp {} $(DESTDIR)/usr/lib/sbuild/ \;
-	find chroot -type f -maxdepth 1 -exec cp {} $(DESTDIR)/usr/lib/sbuild/ \;
-	mv $(DESTDIR)/usr/lib/sbuild/README-buildd.chroot \
+	find bin -type f -maxdepth 1 -exec cp {} $(DESTDIR)/usr/share/sbuild/ \;
+	find chroot -type f -maxdepth 1 -exec cp {} $(DESTDIR)/usr/share/sbuild/ \;
+	mv $(DESTDIR)/usr/share/sbuild/README-buildd.chroot \
 		$(DESTDIR)/usr/share/doc/sbuild/
 
 # Build architecture-independent files here.
