@@ -144,7 +144,7 @@ $stalled_pkg_timeout = 150;
 
 # Some programs called by sbuild:
 
-#$mailprog = "/usr/lib/sendmail";
+#$mailprog = "/usr/sbin/sendmail";
 #$dpkg = "/usr/bin/dpkg";
 #$sudo = "/usr/bin/sudo";
 # change to /usr/bin/sudo if you don't have fakeroot
